<resources>
    <string name="app_name">ExamenFinalMovilesRicardoQuintanilla</string>
    <string name="title_home"> Inicio </string>
    <string name="update">Update and Create</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="read">Read</string>
    <string name="sqlite">SQLite</string>
    <string name="vacio" />
    <string name="btnUpdate">Actualizar</string>
    <string name="btnView">Ver</string>
    <string name="btnSave">Guardar</string>
    <string name="btnDelete">Borrar</string>
    <string name="todo">TODO</string>
    <string name="buttonlogintxt">LOGIN</string>
    <string name="passwordlbl">Password</string>
    <string name="Usuariolbl">Usuario</string>
    <string name="pwdtxt">Escribir password</string>
    <string name="textobienvenida" />
    <string name="usuariohint">Escribir su usuario</string>
    <string name="favorito">Favorito</string>
    <string name="Nofavorito">No favorito</string>
    <string name="ver">Ver</string>
    <string name="createtitle">Create</string>
    <string name="labelnombre">Nombre de Carro</string>
    <string name="labelPrecio">Precio de Carro</string>
    <string name="labelimagen">Url de imagen del carro</string>
    <string name="hintnombre">Escriba el nombre</string>
    <string name="hintPrecio">Escriba el precio</string>
    <string name="hintImagen">Escriba la url de la imagen</string>
    <string name="labelid">ID del Carro</string>
    <string name="hintid">Escribe ID del carro</string>
    <string name="updatetitle">Update</string>
    <string name="updatetxt">Updatee</string>
    <string name="titleupdatecreate"><![CDATA[Update & Create]]></string>
    <string name="labelidmarca">ID Marca del Carro</string>
    <string name="hintidmarca">Escriba la id de marca del 1 al 6</string>
    <string name="nombredeauto">Auto</string>
    <string name="marcadeauto">Marca</string>
</resources>