<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Read">
    <ImageView
        android:id="@+id/imagenCarro"
        android:layout_width="191dp"
        android:layout_height="202dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nombreauto"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:hint="@string/nombredeauto"
        android:textColorHint="#78909C"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/precioauto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenCarro" />

    <TextView
        android:id="@+id/precioauto"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:hint="@string/marcadeauto"
        android:textColorHint="#78909C"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreauto" />

    <include
        android:id="@+id/include"
        layout="@layout/bottom_menu_persistente"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/buttonread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="read"
        android:text="@string/read"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <Button
        android:id="@+id/buttonfav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitTop"
        android:text="@string/favorito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/buttonunfav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteTop"
        android:text="@string/Nofavorito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />
</androidx.constraintlayout.widget.ConstraintLayout>